--- a/P2/P2_design_5.html
+++ b/P2/P2_design_5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>P1 Project Requirements</title>
+        <title>P2 Design</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
         <meta name="description" content="project requirements" />
@@ -284,10 +284,10 @@
             <table>
                 <thead>
                     <tr>
-                        <td>Filename</td>
-                        <td>Description</td>
-                        <td>In charge</td>
-                        <td>Deadline</td>
+                        <th>Filename</th>
+                        <th>Description</th>
+                        <th>In charge</th>
+                        <th>Deadline</th>
                     </tr>
                 </thead>
                 <tbody>
