Update title in html page

--- a/P2/P2_design_5.html
+++ b/P2/P2_design_5.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>P1 Project Requirements</h1>
+            <h1>P2 Design</h1>
             <p>
                 Maja Sung Hee Jenssen, Tobias Carl Axel Fall Jakobsen,
                 Aleksander Knutsen, Sondre Haugen Elgaaen
