whoops some mistakes were made

--- a/P2/P2_design_5.html
+++ b/P2/P2_design_5.html
@@ -6,7 +6,11 @@
         <link rel="stylesheet" href="style.css" />
         <meta name="description" content="project requirements" />
         <meta name="keywords" content="IT2805, Project requirements" />
-        <meta name="author" content="Aleksander Knutsen" />
+        <meta
+            name="author"
+            content="Maja Sung Hee Jenssen, Tobias Carl Axel Fall Jakobsen,
+        Aleksander Knutsen, Sondre Haugen Elgaaen"
+        />
     </head>
     <body>
         <header>
@@ -124,7 +128,7 @@
             <p>Universal styling</p>
             <ul>
                 <li>Font header: Open Sans, Verdana</li>
-                <li>Font body: Open Sand, Verdana</li>
+                <li>Font body: Open Sans, Verdana</li>
                 <li>
                     Main color scheme
                     <ul>
