--- a/website/index.html
+++ b/website/index.html
@@ -60,6 +60,6 @@
         </div>
 
         <div id="popup"></div>
-        <script src="scripts/popup.js"></script>
+        <script src="scripts/popupNotification.js"></script>
     </body>
 </html>
