--- a/website/index.html
+++ b/website/index.html
@@ -9,12 +9,15 @@
             content="Anime, NTNU, student, social, series, screening, movie, film"
         />
         <meta name="author" content="Anime NTNU" />
-        <link rel="stylesheet" href="master.css" />
+        <link rel="stylesheet" href="css/master.css" />
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
             rel="stylesheet"
         />
     </head>
+
+    <div id="navbar"></div>
+
     <body>
         <div id="frontpage_welcome" class="content">
             <section>
@@ -60,6 +63,7 @@
         </div>
 
         <div id="popup"></div>
+        <script src="scripts/navbar.js"></script>
         <script src="scripts/popupNotification.js"></script>
     </body>
 </html>
