--- a/website/screenings.html
+++ b/website/screenings.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/master.css" />
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8" />
+        <title></title>
+        <link rel="stylesheet" href="css/master.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div id="navbar"></div>
 
-    <div id="navbar"></div>
-
-
-    <script src="scripts/navbar.js"></script>
-  </body>
+        <script src="scripts/navbar.js"></script>
+    </body>
 </html>
