Frontpage and popup now uses flexboxes in order to be more responsive

--- a/website/index.html
+++ b/website/index.html
@@ -19,47 +19,50 @@
     <div id="navbar"></div>
 
     <body>
-        <div id="frontpage_welcome" class="content">
-            <section>
-                <header><h1>Welcome</h1></header>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Fusce eu quam orci. Praesent eget neque nec neque vehicula
-                    eleifend et ut neque. Praesent elementum nibh vitae odio
-                    pulvinar ullamcorper. In eu sapien arcu. Integer pharetra
-                    justo sed risus elementum, porttitor sagittis ante porta.
-                    Aliquam faucibus nunc quis neque semper, et pharetra tortor
-                    vestibulum.
-                </p>
-            </section>
-        </div>
+        <div class="frontpage_container">
+            <div id="frontpage_welcome" class="content">
+                <section>
+                    <header><h1>Welcome</h1></header>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce eu quam orci. Praesent eget neque nec neque
+                        vehicula eleifend et ut neque. Praesent elementum nibh
+                        vitae odio pulvinar ullamcorper. In eu sapien arcu.
+                        Integer pharetra justo sed risus elementum, porttitor
+                        sagittis ante porta. Aliquam faucibus nunc quis neque
+                        semper, et pharetra tortor vestibulum.
+                    </p>
+                </section>
+            </div>
 
-        <div id="frontpage_news" class="content">
-            <section>
-                <header><h2>Latest news</h2></header>
-                <!-- TODO: Retrieve latest news with script -->
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Fusce eu quam orci. Praesent eget neque nec neque vehicula
-                    eleifend et ut neque. Praesent elementum nibh vitae odio
-                    pulvinar ullamcorper. In eu sapien arcu. Integer pharetra
-                    justo sed risus elementum, porttitor sagittis ante porta.
-                    Aliquam faucibus nunc quis neque semper, et pharetra tortor
-                    vestibulum. Morbi ac ullamcorper nisi. Donec vel congue
-                    urna, sit amet aliquam orci. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Proin lectus sem, luctus eu ex
-                    eu, volutpat posuere quam. Nullam pellentesque feugiat magna
-                    sit amet luctus. Morbi pharetra quis massa id interdum.
-                </p>
-                <span class="author">-author, date</span>
-            </section>
-        </div>
+            <div id="frontpage_news" class="content">
+                <section>
+                    <header><h2>Latest news</h2></header>
+                    <!-- TODO: Retrieve latest news with script -->
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Fusce eu quam orci. Praesent eget neque nec neque
+                        vehicula eleifend et ut neque. Praesent elementum nibh
+                        vitae odio pulvinar ullamcorper. In eu sapien arcu.
+                        Integer pharetra justo sed risus elementum, porttitor
+                        sagittis ante porta. Aliquam faucibus nunc quis neque
+                        semper, et pharetra tortor vestibulum. Morbi ac
+                        ullamcorper nisi. Donec vel congue urna, sit amet
+                        aliquam orci. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Proin lectus sem, luctus eu ex eu,
+                        volutpat posuere quam. Nullam pellentesque feugiat magna
+                        sit amet luctus. Morbi pharetra quis massa id interdum.
+                    </p>
+                    <span class="author">-author, date</span>
+                </section>
+            </div>
 
-        <div id="frontpage_nextscreening" class="content">
-            <section>
-                <header><h2>Next screening</h2></header>
-                <!-- TODO: Retrieve next screening with script -->
-            </section>
+            <div id="frontpage_nextscreening" class="content">
+                <section>
+                    <header><h2>Next screening</h2></header>
+                    <!-- TODO: Retrieve next screening with script -->
+                </section>
+            </div>
         </div>
 
         <div id="popup"></div>
