--- a/website/index.html
+++ b/website/index.html
@@ -64,6 +64,7 @@
 
         <div id="popup"></div>
         <script src="scripts/navbar.js"></script>
+        <script src="scripts/anime.js"></script>
         <script src="scripts/popupNotification.js"></script>
     </body>
 </html>
