--- a/website/screenings.html
+++ b/website/screenings.html
@@ -11,7 +11,14 @@
     </head>
     <body>
         <div id="navbar"></div>
+        <div id="screeningsContainer">
 
+        </div>
+        
+        <div id="popup"></div>
         <script src="scripts/navbar.js"></script>
+        <script src="scripts/anime.js"></script>
+        <script src="scripts/screenings.js"></script>
+        <script src="scripts/popupNotification.js"></script>
     </body>
 </html>
