Add screening to frontpage, minor ui tweak

--- a/website/screenings.html
+++ b/website/screenings.html
@@ -18,7 +18,8 @@
         <div id="popup"></div>
         <script src="scripts/navbar.js"></script>
         <script src="scripts/anime.js"></script>
-        <script src="scripts/screenings.js"></script>
+        <script src="scripts/showScreenings.js"></script>
         <script src="scripts/popupNotification.js"></script>
+        <script>generateFutureScreenings(new Date(), ["Rokka", "Hataraku", "Minami", "Zetsubou", "Shirobako"], "screeningsContainer");</script>
     </body>
 </html>
