--- a/website/index.html
+++ b/website/index.html
@@ -35,31 +35,33 @@
                 </section>
             </div>
 
-            <div id="frontpage_news" class="content">
+            <div id="frontpage_news">
                 <section>
-                    <header><h2>Latest news</h2></header>
+                    <header onclick="location.href = 'newsfeed.html';"><h2>Latest news</h2></header>
                     <!-- TODO: Retrieve latest news with script -->
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Fusce eu quam orci. Praesent eget neque nec neque
-                        vehicula eleifend et ut neque. Praesent elementum nibh
-                        vitae odio pulvinar ullamcorper. In eu sapien arcu.
-                        Integer pharetra justo sed risus elementum, porttitor
-                        sagittis ante porta. Aliquam faucibus nunc quis neque
-                        semper, et pharetra tortor vestibulum. Morbi ac
-                        ullamcorper nisi. Donec vel congue urna, sit amet
-                        aliquam orci. Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit. Proin lectus sem, luctus eu ex eu,
-                        volutpat posuere quam. Nullam pellentesque feugiat magna
-                        sit amet luctus. Morbi pharetra quis massa id interdum.
-                    </p>
-                    <span class="author">-author, date</span>
+                    <div class="content">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Fusce eu quam orci. Praesent eget neque nec neque
+                            vehicula eleifend et ut neque. Praesent elementum nibh
+                            vitae odio pulvinar ullamcorper. In eu sapien arcu.
+                            Integer pharetra justo sed risus elementum, porttitor
+                            sagittis ante porta. Aliquam faucibus nunc quis neque
+                            semper, et pharetra tortor vestibulum. Morbi ac
+                            ullamcorper nisi. Donec vel congue urna, sit amet
+                            aliquam orci. Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Proin lectus sem, luctus eu ex eu,
+                            volutpat posuere quam. Nullam pellentesque feugiat magna
+                            sit amet luctus. Morbi pharetra quis massa id interdum.
+                        </p>
+                        <span class="author">-author, date</span>
+                    </div>
                 </section>
             </div>
 
-            <div id="frontpage_nextscreening" class="content">
-                <section>
-                    <header><h2>Next screening</h2></header>
+            <div id="frontpage_nextscreening" >
+                <section id="next_screening">
+                    <header onclick="location.href = 'screenings.html';"><h2>Next screening</h2></header>
                     <!-- TODO: Retrieve next screening with script -->
                 </section>
             </div>
@@ -69,5 +71,7 @@
         <script src="scripts/navbar.js"></script>
         <script src="scripts/anime.js"></script>
         <script src="scripts/popupNotification.js"></script>
+        <script src="scripts/showScreenings.js"></script>
+        <script>generateNextScreening(new Date(), ["Rokka", "Hataraku", "Minami", "Zetsubou", "Shirobako"], "next_screening")</script>
     </body>
 </html>
