Add P3 and P4 skeletons

--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
     <head>
         <title>Anime NTNU</title>
         <meta charset="utf-8" />
