--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -2,10 +2,13 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title></title>
+        <title>Anime NTNU - Newsfeed</title>
         <link rel="stylesheet" href="css/master.css" />
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
 
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
@@ -17,11 +20,19 @@
 
         <div class="newsfeed_container">
             <h1 class="newsfeed_title">Newsfeed</h1>
-            <hr class="newsfeed_hr">
+            <hr class="newsfeed_hr" />
             <div class="content">
                 <section>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.
                     </p>
                     <span class="author">-Ola, 19. oktober 2020</span>
                 </section>
@@ -29,7 +40,21 @@
             <div class="content">
                 <section>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec justo aliquet, luctus lorem id, placerat purus. Nulla vel urna nec justo varius vestibulum vel vitae ex. Nunc cursus erat non felis mattis, sit amet faucibus odio tempus. In tempor tellus massa, sit amet gravida diam efficitur vitae. Suspendisse vehicula libero at scelerisque viverra. In est justo, scelerisque quis imperdiet a, scelerisque nec nisi. Aliquam pulvinar interdum nisl eu pharetra. Donec vulputate urna sagittis ligula lobortis congue. Phasellus mi tortor, congue sit amet pretium id, molestie sit amet magna. Curabitur consequat, metus non congue egestas, justo leo convallis nunc, at lobortis nunc velit vel leo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Morbi nec justo aliquet, luctus lorem id, placerat
+                        purus. Nulla vel urna nec justo varius vestibulum vel
+                        vitae ex. Nunc cursus erat non felis mattis, sit amet
+                        faucibus odio tempus. In tempor tellus massa, sit amet
+                        gravida diam efficitur vitae. Suspendisse vehicula
+                        libero at scelerisque viverra. In est justo, scelerisque
+                        quis imperdiet a, scelerisque nec nisi. Aliquam pulvinar
+                        interdum nisl eu pharetra. Donec vulputate urna sagittis
+                        ligula lobortis congue. Phasellus mi tortor, congue sit
+                        amet pretium id, molestie sit amet magna. Curabitur
+                        consequat, metus non congue egestas, justo leo convallis
+                        nunc, at lobortis nunc velit vel leo. Orci varius
+                        natoque penatibus et magnis dis parturient montes,
+                        nascetur ridiculus mus.
                     </p>
                     <span class="author">-Jonas, 14. oktober 2020</span>
                 </section>
