--- a/website/about.html
+++ b/website/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title></title>
+        <title>Anime NTNU - About</title>
         <link rel="stylesheet" href="css/master.css" />
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
