Write about.html, minor UI tweak

--- a/website/index.html
+++ b/website/index.html
@@ -37,7 +37,7 @@
 
             <div id="frontpage_news">
                 <section>
-                    <header onclick="location.href = 'newsfeed.html';"><h2>Latest news</h2></header>
+                    <header id="latest_news_header" onclick="location.href = 'newsfeed.html';"><h2>Latest news</h2></header>
                     <!-- TODO: Retrieve latest news with script -->
                     <div class="content">
                         <p>
@@ -61,7 +61,7 @@
 
             <div id="frontpage_nextscreening" >
                 <section id="next_screening">
-                    <header onclick="location.href = 'screenings.html';"><h2>Next screening</h2></header>
+                    <header id="next_screening_header" onclick="location.href = 'screenings.html';"><h2>Next screening</h2></header>
                     <!-- TODO: Retrieve next screening with script -->
                 </section>
             </div>
