--- a/website/about.html
+++ b/website/about.html
@@ -11,7 +11,38 @@
     </head>
     <body>
         <div id="navbar"></div>
-
+        <div class="about_container">
+            <h1>About Anime NTNU</h1>
+            <hr>
+            <div class="content">
+                <section>
+                    <p>
+                        Anime NTNU is a student organization for students and other people who are fond of anime (Japanese animation) or would like to give it a try. 
+                        We host open screenings of anime weekly at Gløshaugen. 
+                        Our screenings take place on Wednesdays at 19:30, usually in <a href="https://bit.ly/34wlaOV" target="blank">R5 at "Realfagsbygget"</a>.
+                        <br/>
+                        <br/>
+                        At the beginning of each semester, we hold a poll which decides which anime will be screened throughout the semester. 
+                        What anime is in the poll is based on suggestions from the audience and culled to a reasonable amount.
+                        We usually end up watching four 1-cour (12-13 episodes) and one 2-cour (24-26 episodes) anime each semester.
+                        <br/>
+                        <br/>
+                        Due to the ongoing pandemic, our screenings are currently held digitally.
+                        For more infomation about how we're handling screenings this semester, check out our Discord.
+                    </p>
+                </section>
+            </div>
+            <h1>Contact us</h1>
+            <hr>
+            <div class="content">
+                <section>
+                    <p>
+                         You can contact us through our Discord server.
+                    </p>
+                </section>
+            </div>
+        </div>
         <script src="scripts/navbar.js"></script>
+        <script src="scripts/becomeMember.js"></script>
     </body>
 </html>
