--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -24,39 +24,26 @@
             <div class="content">
                 <section>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat. Duis aute irure dolor in
-                        reprehenderit in voluptate velit esse cillum dolore eu
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit
-                        anim id est laborum.
+                        We are starting off the spring 2020 semester by showing the 2012 animated movie Wolf Children this Wednesday (2020-01-15) at 19:30 in R5. Bring a friend! <br>
+                        <br>
+                        The poll for new series is up, and available at <a href="https://forms.gle/m8gQFJP8E2ATWr2e7">https://forms.gle/m8gQFJP8E2ATWr2e7</a>. It will stay active until the end of week 3.
                     </p>
-                    <span class="author">-Ola, 19. oktober 2020</span>
+                    <span class="author">-berntjd, 19. januar 2020</span>
                 </section>
             </div>
             <div class="content">
                 <section>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Morbi nec justo aliquet, luctus lorem id, placerat
-                        purus. Nulla vel urna nec justo varius vestibulum vel
-                        vitae ex. Nunc cursus erat non felis mattis, sit amet
-                        faucibus odio tempus. In tempor tellus massa, sit amet
-                        gravida diam efficitur vitae. Suspendisse vehicula
-                        libero at scelerisque viverra. In est justo, scelerisque
-                        quis imperdiet a, scelerisque nec nisi. Aliquam pulvinar
-                        interdum nisl eu pharetra. Donec vulputate urna sagittis
-                        ligula lobortis congue. Phasellus mi tortor, congue sit
-                        amet pretium id, molestie sit amet magna. Curabitur
-                        consequat, metus non congue egestas, justo leo convallis
-                        nunc, at lobortis nunc velit vel leo. Orci varius
-                        natoque penatibus et magnis dis parturient montes,
-                        nascetur ridiculus mus.
+                        Hi all, <br>
+                        The votes have been counted, and the program this semester is: <br>
+                        - Cowboy Bebop <br>
+                        - Humanity Has Declined <br>
+                        - The Melancholy of Haruhi Suzumiya (season 1) <br>
+                        - Higurashi: When They Cry <br>
+                        <br>
+                        As usual, it will be every Wednesday (starting 2019-08-28) in R5 at 19:30, except for week 45 (2019-11-06); that week we will be in R9.
                     </p>
-                    <span class="author">-Jonas, 14. oktober 2020</span>
+                    <span class="author">-berntjd, 25. august 2019</span>
                 </section>
             </div>
         </div>
