implemented membership button in navbar

--- a/website/about.html
+++ b/website/about.html
@@ -5,6 +5,10 @@
         <title>Anime NTNU - About</title>
         <link rel="stylesheet" href="css/master.css" />
         <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
             rel="stylesheet"
         />
@@ -17,12 +21,12 @@
             <div class="content">
                 <section>
                     <p>
-                        Anime NTNU is a student organization for students and other people who are fond of anime (Japanese animation) or would like to give it a try. 
-                        We host open screenings of anime weekly at Gløshaugen. 
+                        Anime NTNU is a student organization for students and other people who are fond of anime (Japanese animation) or would like to give it a try.
+                        We host open screenings of anime weekly at Gløshaugen.
                         Our screenings take place on Wednesdays at 19:30, usually in <a href="https://bit.ly/34wlaOV" target="blank">R5 at "Realfagsbygget"</a>.
                         <br/>
                         <br/>
-                        At the beginning of each semester, we hold a poll which decides which anime will be screened throughout the semester. 
+                        At the beginning of each semester, we hold a poll which decides which anime will be screened throughout the semester.
                         What anime is in the poll is based on suggestions from the audience and culled to a reasonable amount.
                         We usually end up watching four 1-cour (12-13 episodes) and one 2-cour (24-26 episodes) anime each semester.
                         <br/>
