--- a/website/voting.html
+++ b/website/voting.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Anime NTNU - Voting</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Voting</title>
         <link rel="stylesheet" href="css/master.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
             rel="stylesheet"
@@ -14,54 +18,45 @@
         <div id="navbar"></div>
 
         <header>
-            <h1>Voting page</h1>
+          <h1>Voting page</h1>
         </header>
 
         <div class="content" id="infobox">
-            <p>
-                From this page you may vote on which screenings you would like
-                Anime NTNU to host first this upcoming semester. You can do so
-                by dragging and dropping the options to the desired positions.
-                The order of preference is read from top to bottom, meaning that
-                the title you arrange first on the list will be considered the
-                title you would like to watch the most. Likewise, the title at
-                the bottom of the list will be considered the title you want to
-                see the least. After reordering the list to your liking, you can
-                submit the answer by clicking on the "submit vote" button.
-            </p>
+
+          <p>From this page you may vote on which screenings you would like
+            Anime NTNU to host first this upcoming semester. You can do so by
+            dragging and dropping the options to the desired positions. The
+            order of preference is read from top to bottom, meaning that the
+            title you arrange first on the list will be considered the title
+            you would like to watch the most. Likewise, the title at the bottom
+            of the list will be considered the title you want to see the least.
+            After reordering the list to your liking, you can submit the answer
+            by clicking on the "submit vote" button.
+          </p>
         </div>
 
         <div class="voting_wrapper">
-            <ul class="voting_container">
-                <li class="voting_element">Minami-ke (2007)</li>
-                <li class="voting_element">Natsume’s Book of Friends (2008)</li>
-                <li class="voting_element">Sayonara Zetsubou Sensei (2008)</li>
-                <li class="voting_element">Kyouso Giga (2013)</li>
-                <li class="voting_element">Rokka no Yuusha (2015)</li>
-                <li class="voting_element">
-                    ERASED: Boku dake ga Inai Machi (2016)
-                </li>
-                <li class="voting_element">Konosuba (2016)</li>
-                <li class="voting_element">Barakamon (2014)</li>
-                <li class="voting_element">Overlord (2015)</li>
-                <li class="voting_element">The Devil is a Part Timer (2013)</li>
-                <li class="voting_element">
-                    Kino no Tabi: The Beautiful World (2003)
-                </li>
-                <li class="voting_element">Terror in Resonance (2014)</li>
-            </ul>
-            <div class="voting_button">
-                <button
-                    id="voting_btn"
-                    type="button"
-                    onClick="clicked_button()"
-                >
-                    Submit vote
-                </button>
-            </div>
+          <ul class="voting_container">
+            <li class="voting_element">Minami-ke (2007)</li>
+            <li class="voting_element">Natsume’s Book of Friends (2008)</li>
+            <li class="voting_element">Sayonara Zetsubou Sensei (2008)</li>
+            <li class="voting_element">Kyouso Giga (2013)</li>
+            <li class="voting_element">Rokka no Yuusha (2015)</li>
+            <li class="voting_element">ERASED: Boku dake ga Inai Machi (2016)</li>
+            <li class="voting_element">Konosuba (2016)</li>
+            <li class="voting_element">Barakamon (2014)</li>
+            <li class="voting_element">Overlord (2015)</li>
+            <li class="voting_element">The Devil is a Part Timer (2013)</li>
+            <li class="voting_element">Kino no Tabi: The Beautiful World (2003)</li>
+            <li class="voting_element">Terror in Resonance (2014)</li>
+          </ul>
+          <div class="voting_button">
+            <button id="voting_btn" type="button" onClick="clicked_button()"> Submit vote</button>
+          </div>
         </div>
 
         <script src="scripts/navbar.js"></script>
         <script src="scripts/voting.js"></script>
+        <script src="scripts/becomeMember.js"></script>
     </body>
 </html>
