Index content wraps when screen is narrow

--- a/website/index.html
+++ b/website/index.html
@@ -18,11 +18,13 @@
 
     <body>
         <div id="navbar"></div>
+        
         <div class="frontpage_container">
-            <div id="frontpage_welcome" class="content">
-                <section>
-                    <header><h1>Welcome</h1></header>
-                    <p>
+            <div id="frontpage_welcome">
+                <h1>Welcome</h1>
+                <hr>
+                <section class="content">
+                    <p >
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Fusce eu quam orci. Praesent eget neque nec neque
                         vehicula eleifend et ut neque. Praesent elementum nibh
@@ -36,9 +38,11 @@
 
             <div id="frontpage_news">
                 <section>
+                    
                     <header id="latest_news_header" onclick="location.href = 'newsfeed.html';">
                         <h2>Latest news</h2>
                     </header>
+                    <hr>
                     <!-- TODO: Retrieve latest news with script -->
                     <div class="content">
                         <p>
@@ -66,6 +70,7 @@
                     <header id="next_screening_header" onclick="location.href = 'screenings.html';">
                         <h2>Next screening</h2>
                     </header>
+                    <hr>
                     <!-- TODO: Retrieve next screening with script -->
                 </section>
             </div>
