Newsfeed update and linting

--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -18,37 +18,18 @@
     <body>
         <div id="navbar"></div>
 
-        <div class="newsfeed_container">
+        <div id="newsfeed_container">
             <h1 class="newsfeed_title">Newsfeed</h1>
             <hr class="newsfeed_hr" />
-            <div class="content">
-                <section>
-                    <p>
-                        We are starting off the spring 2020 semester by showing the 2012 animated movie Wolf Children this Wednesday (2020-01-15) at 19:30 in R5. Bring a friend! <br>
-                        <br>
-                        The poll for new series is up, and available at <a href="https://forms.gle/m8gQFJP8E2ATWr2e7">https://forms.gle/m8gQFJP8E2ATWr2e7</a>. It will stay active until the end of week 3.
-                    </p>
-                    <span class="author">-berntjd, 19. januar 2020</span>
-                </section>
-            </div>
-            <div class="content">
-                <section>
-                    <p>
-                        Hi all, <br>
-                        The votes have been counted, and the program this semester is: <br>
-                        - Cowboy Bebop <br>
-                        - Humanity Has Declined <br>
-                        - The Melancholy of Haruhi Suzumiya (season 1) <br>
-                        - Higurashi: When They Cry <br>
-                        <br>
-                        As usual, it will be every Wednesday (starting 2019-08-28) in R5 at 19:30, except for week 45 (2019-11-06); that week we will be in R9.
-                    </p>
-                    <span class="author">-berntjd, 25. august 2019</span>
-                </section>
-            </div>
+            
         </div>
 
         <script src="scripts/navbar.js"></script>
         <script src="scripts/becomeMember.js"></script>
+        <script src="scripts/news.js"></script>
+        <script src="scripts/showNews.js"></script>
+        <script>
+            displayAllNews();
+        </script>
     </body>
 </html>
