--- a/website/index.html
+++ b/website/index.html
@@ -41,31 +41,14 @@
             </div>
 
             <div id="frontpage_news">
-                <section>
+                <section id="news_section">
                     
                     <header id="latest_news_header" onclick="location.href = 'newsfeed.html';">
                         <h2>Latest news</h2>
                     </header>
                     <hr>
                     <!-- TODO: Retrieve latest news with script -->
-                    <div class="content">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Fusce eu quam orci. Praesent eget neque nec
-                            neque vehicula eleifend et ut neque. Praesent
-                            elementum nibh vitae odio pulvinar ullamcorper. In
-                            eu sapien arcu. Integer pharetra justo sed risus
-                            elementum, porttitor sagittis ante porta. Aliquam
-                            faucibus nunc quis neque semper, et pharetra tortor
-                            vestibulum. Morbi ac ullamcorper nisi. Donec vel
-                            congue urna, sit amet aliquam orci. Lorem ipsum
-                            dolor sit amet, consectetur adipiscing elit. Proin
-                            lectus sem, luctus eu ex eu, volutpat posuere quam.
-                            Nullam pellentesque feugiat magna sit amet luctus.
-                            Morbi pharetra quis massa id interdum.
-                        </p>
-                        <span class="author">-author, date</span>
-                    </div>
+                    
                 </section>
             </div>
 
@@ -82,9 +65,14 @@
 
         <div id="popup"></div>
         <script src="scripts/navbar.js"></script>
+        <script src="scripts/news.js"></script>
         <script src="scripts/anime.js"></script>
         <script src="scripts/popupNotification.js"></script>
         <script src="scripts/showScreenings.js"></script>
+        <script src="scripts/showNews.js"></script>
+        <script>
+            displayLatestNews();
+        </script>
         <script>
             generateNextScreening(
                 new Date(),
