Website done? Clean code, make consistent

--- a/website/about.html
+++ b/website/about.html
@@ -15,9 +15,11 @@
     </head>
     <body>
         <div id="navbar"></div>
-        <div class="about_container">
+        <header class="page_header">
             <h1>About Anime NTNU</h1>
             <hr>
+        </header>
+        <div class="page_container">
             <div class="content">
                 <section>
                     <p>
@@ -36,8 +38,10 @@
                     </p>
                 </section>
             </div>
-            <h1>Contact us</h1>
-            <hr>
+            <header>
+                <h1 id="contact_title">Contact us</h1>
+                <hr>
+            </header>
             <div class="content">
                 <section>
                     <p>
