--- a/website/index.html
+++ b/website/index.html
@@ -23,19 +23,16 @@
     <body>
         <div id="navbar"></div>
         
-        <div class="frontpage_container">
+        <div id="frontpage_container">
             <div id="frontpage_welcome">
                 <h1>Welcome</h1>
                 <hr>
                 <section class="content">
-                    <p >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Fusce eu quam orci. Praesent eget neque nec neque
-                        vehicula eleifend et ut neque. Praesent elementum nibh
-                        vitae odio pulvinar ullamcorper. In eu sapien arcu.
-                        Integer pharetra justo sed risus elementum, porttitor
-                        sagittis ante porta. Aliquam faucibus nunc quis neque
-                        semper, et pharetra tortor vestibulum.
+                    <p>
+                        Hello and welcome to Anime NTNU's sparkling new website!<br/>
+                        <br/>
+                        Here you can find information about upcomming screenings, news for our members, and some information about us.<br/>
+                        If you're new to Anime NTNU, maybe take a look at "About us"?
                     </p>
                 </section>
             </div>
@@ -46,7 +43,7 @@
                     <header id="latest_news_header" onclick="location.href = 'newsfeed.html';">
                         <h2>Latest news</h2>
                     </header>
-                    <hr>
+                    <hr/>
                     <!-- TODO: Retrieve latest news with script -->
                     
                 </section>
@@ -57,7 +54,7 @@
                     <header id="next_screening_header" onclick="location.href = 'screenings.html';">
                         <h2>Next screening</h2>
                     </header>
-                    <hr>
+                    <hr/>
                     <!-- TODO: Retrieve next screening with script -->
                 </section>
             </div>
