--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -18,11 +18,12 @@
     <body>
         <div id="navbar"></div>
 
-        <div id="newsfeed_container">
-            <h1 class="newsfeed_title">Newsfeed</h1>
-            <hr class="newsfeed_hr" />
-            
-        </div>
+        <header class="page_header">
+            <h1>Newsfeed</h1>
+            <hr/>
+        </header>
+
+        <div id="newsfeed_container" class="page_container"></div>
 
         <script src="scripts/navbar.js"></script>
         <script src="scripts/becomeMember.js"></script>
