Changes in voting

--- a/P3/P3_changes_5.html
+++ b/P3/P3_changes_5.html
@@ -38,7 +38,17 @@
 
         <section>
             <header><h2>Changes made</h2></header>
-            <p></p>
+            <p>
+                Voting.html - Instead of having thumbnails for each anime in the
+                voting list, we decided to use only text (the name of the anime
+                and its year of release). We made this decision because this
+                list can be quite long - in our example, there are 12 options to
+                rank. This is a representative number, judging from voting
+                rounds performed in real-life scenarious prior semesters.
+                Thumbnails usually require large amounts of space on the screen
+                to be recognizable. In order to keep the list managable and to
+                keep it easy to drag and drop, we decided not to use thumbnails.
+            </p>
         </section>
 
         <section>
