--- a/website/about.html
+++ b/website/about.html
@@ -8,6 +8,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
             rel="stylesheet"
         />
+        <script src="scripts/initPopup.js"></script>
     </head>
     <body>
         <div id="navbar"></div>
