--- a/website/voting.html
+++ b/website/voting.html
@@ -9,6 +9,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
             rel="stylesheet"
         />
+        <script src="scripts/initPopup.js"></script>
     </head>
     <body>
         <div id="navbar"></div>
