Improved hover effects on links, buttons, and sandwich bar

--- a/website/voting.html
+++ b/website/voting.html
@@ -62,7 +62,7 @@
                 </ul>
                 <div class="voting_button">
                     <button
-                        id="voting_btn"
+                        id="voting_submit"
                         type="button"
                         onClick="clicked_button()"
                     >
