--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Anime NTNU</title>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=0.7" />
         <meta name="description" content="Anime NTNU" />
         <meta
             name="keywords"
