--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=0.7" />
         <title>Anime NTNU - Newsfeed</title>
         <link rel="stylesheet" href="css/master.css" />
         <script src="scripts/initPopup.js"></script>
