Frontpage: replaced br with p; fixed typo; and added internal hyperlinks

--- a/website/index.html
+++ b/website/index.html
@@ -23,14 +23,20 @@
                 <hr />
                 <section class="content">
                     <p>
-                        Hello and welcome to Anime NTNU's sparkling new
-                        website!<br />
-                        <br />
-                        Here you can find information about upcomming
-                        screenings, news for our members, and some information
-                        about us.<br />
-                        If you're new to Anime NTNU, maybe take a look at "About
-                        us"?
+                        Hello, and welcome to Anime NTNU's sparkling new
+                        website!
+                    </p>
+                    <p>
+                        Here you can find information about
+                        <a href="screenings.html">upcoming screenings</a>,
+                        <a href="newsfeed.html">news for our members</a>, and
+                        some <a href="about.html">information about us</a>.
+                    </p>
+                    <p>
+                        If you're new to Anime NTNU, maybe take a look at "<a
+                            href="about.html"
+                            >About us</a
+                        >"?
                     </p>
                 </section>
             </div>
