--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -25,12 +25,16 @@
 
         <div id="newsfeed_container" class="page_container"></div>
 
+        <div class="button_container">
+            <button class="button" type="button" onClick="displayAllNews()">Display all news</button>
+          </div>
+
         <script src="scripts/navbar.js"></script>
         <script src="scripts/becomeMember.js"></script>
         <script src="scripts/news.js"></script>
         <script src="scripts/showNews.js"></script>
         <script>
-            displayAllNews();
+            displayFirstTwentyNews();
         </script>
     </body>
 </html>
