--- a/website/voting.html
+++ b/website/voting.html
@@ -52,8 +52,8 @@
               <li class="voting_element">Kino no Tabi: The Beautiful World (2003)</li>
               <li class="voting_element">Terror in Resonance (2014)</li>
             </ul>
-            <div class="voting_button">
-              <button id="voting_btn" type="button" onClick="clicked_button()"> Submit vote</button>
+            <div class="button_container">
+              <button class="button" type="button" onClick="clicked_button()"> Submit vote</button>
             </div>
           </div>
         </div>
