--- a/website/voting.html
+++ b/website/voting.html
@@ -16,39 +16,6 @@
         </header>
 
         <div class="page_container">
-<<<<<<< HEAD
-          <div class="content">
-  
-            <p>From this page you may vote on which screenings you would like
-              Anime NTNU to host first this upcoming semester. You can do so by
-              dragging and dropping the options to the desired positions. The
-              order of preference is read from top to bottom, meaning that the
-              title you arrange first on the list will be considered the title
-              you would like to watch the most. Likewise, the title at the bottom
-              of the list will be considered the title you want to see the least.
-              After reordering the list to your liking, you can submit the answer
-              by clicking on the "submit vote" button.
-            </p>
-          </div>
-  
-          <div class="voting_wrapper">
-            <ul class="voting_container">
-              <li class="voting_element">Minami-ke (2007)</li>
-              <li class="voting_element">Natsume’s Book of Friends (2008)</li>
-              <li class="voting_element">Sayonara Zetsubou Sensei (2008)</li>
-              <li class="voting_element">Kyouso Giga (2013)</li>
-              <li class="voting_element">Rokka no Yuusha (2015)</li>
-              <li class="voting_element">ERASED: Boku dake ga Inai Machi (2016)</li>
-              <li class="voting_element">Konosuba (2016)</li>
-              <li class="voting_element">Barakamon (2014)</li>
-              <li class="voting_element">Overlord (2015)</li>
-              <li class="voting_element">The Devil is a Part Timer (2013)</li>
-              <li class="voting_element">Kino no Tabi: The Beautiful World (2003)</li>
-              <li class="voting_element">Terror in Resonance (2014)</li>
-            </ul>
-            <div class="button_container">
-              <button class="button" type="button" onClick="clicked_button()"> Submit vote</button>
-=======
             <div class="content">
                 <p>
                     From this page you may vote on which screenings you would
@@ -60,7 +27,7 @@
                     the most. Likewise, the title at the bottom of the list will
                     be considered the title you want to see the least. After
                     reordering the list to your liking, you can submit the
-                    answer by clicking on the "submit vote" button.
+                    answerby clicking on the "submit vote" button.
                 </p>
             </div>
 
@@ -89,16 +56,15 @@
                     </li>
                     <li class="voting_element">Terror in Resonance (2014)</li>
                 </ul>
-                <div class="voting_button">
+                <div class="button_container">
                     <button
-                        id="voting_submit"
+                        class="button"
                         type="button"
                         onClick="clicked_button()"
                     >
                         Submit vote
                     </button>
                 </div>
->>>>>>> 85cf992e6c99cc2b81c25b210a0e7bbfedb21436
             </div>
         </div>
 
