The 'Display all news' button is now hidden on click, to prevent a possible infinite list of news on repeated clicks

--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -18,8 +18,15 @@
         <div id="newsfeed_container" class="page_container"></div>
 
         <div class="button_container">
-            <button class="button" type="button" onClick="displayAllNews()">Display all news</button>
-          </div>
+            <button
+                id="buttonDisplayAllNews"
+                class="button"
+                type="button"
+                onClick="displayAllNews()"
+            >
+                Display all news
+            </button>
+        </div>
 
         <script src="scripts/navbar.js"></script>
         <script src="scripts/becomeMember.js"></script>
