initPopup.js -> utilsPopup.js

--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
         />
         <meta name="author" content="Anime NTNU" />
         <link rel="stylesheet" href="css/master.css" />
-        <script src="scripts/initPopup.js"></script>
+        <script src="scripts/utilsPopup.js"></script>
     </head>
 
     <body>
