Removed "show all news"-button

--- a/website/newsfeed.html
+++ b/website/newsfeed.html
@@ -17,9 +17,10 @@
 
         <div id="newsfeed_container" class="page_container"></div>
 
-        <div class="button_container">
-            <button class="button" type="button" onClick="displayAllNews()">Display all news</button>
-          </div>
+        <header class="page_header">
+            <hr />
+            <h2>That's all folks!</h2>
+        </header>
 
         <script src="scripts/navbar.js"></script>
         <script src="scripts/becomeMember.js"></script>
